# X4-Flow

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  cpfont_freetype.c  hb.h
assets/archive/font_converter/: converter.js  index.html
lib/: app_localizations.dart  book_quote.dart  calendar_templates.dart  converter_screen.dart  cpfont_freetype_v2.dart  device_profile.dart  epub_optimizer.dart  fb2_to_epub.dart  firmware_screen.dart  font_converter_screen.dart  freetype_rasterizer.dart  generated_bindings.dart  gpos_kerning_parser.dart  main.dart  native_font_converter.dart  quote_templates.dart  quotes_en.dart  quotes_ru.dart  settings_screen.dart  transfer_screen.dart  wallpaper_screen.dart
test/: widget_test.dart
